# lci_reduce

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
lci_reduce/: __init__.py  __main__.py  cf_resolution.py  cli.py  contribution.py  errors.py  flow_priority.py  gui.py  jsonld_reader.py  jsonld_writer.py  lcia.py  manifest.py  models.py  native_archive.py  pdf_report.py  priority_analyser.py  priority_analyser_gui.py  reducer.py  reduction_curves.py  schema_detect.py  validation.py
lci_reduce/native_support/: OpenLcaJsonExport.java  OpenLcaJsonImport.java
tests/: conftest.py  test_cf_resolution.py  test_cli_smoke.py  test_flow_priority.py  test_greedy_cover.py  test_input_formats.py  test_jsonld_process_editing.py  test_methods_archive_optional.py  test_native_zolca_support.py  test_priority_analyser.py  test_priority_analyser_gui.py  test_protected_exchanges.py  test_reduction_curves.py  test_signed_cover.py  test_tie_breaking.py  test_uncharacterised_policy.py  test_zero_categories.py
