[build-system]
requires = ["setuptools>=58", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lci_reduce"
version = "0.1.0"
description = "ZIP-only reduction of openLCA JSON-LD databases using deterministic signed tau-cover."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.24",
  "reportlab>=4.0",
  "PySide6>=6.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
lci_reduce = "lci_reduce.cli:main"
lci_reduce-gui = "lci_reduce.gui:main"

[tool.setuptools]
packages = ["lci_reduce"]

[tool.setuptools.package-data]
lci_reduce = [
  "vendor/*.jar",
  "native_support/*.java",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
